# shop-kit

./: package-lock.json  package.json
app/: page.tsx
app/components/: Footer.tsx  Navbar.tsx
client/: docs.md  package.json  proxy.ts
server/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
server/apps/common/: model_utils.py  redis.py
server/apps/identity/: auth_views.py  models.py  plans.json  serializers.py  tasks.py  urls.py  views.py
server/apps/identity/domain/: plans.py  tokens.py  utils.py
server/apps/identity/management/: sync_plans.py
server/apps/identity/management/commands/: sync_plans.py
server/apps/identity/migrations/: 0001_initial.py  0002_alter_plan_currency_alter_plan_interval.py  0003_user_administrative_area_user_country_user_line1_and_more.py  0004_alter_plan_currency_alter_plan_interval.py  0005_alter_plan_currency_alter_plan_interval.py  0006_alter_plan_currency_alter_plan_interval.py  0007_alter_plan_code_alter_plan_currency_and_more.py  0008_alter_plan_currency_alter_plan_interval.py  0009_alter_plan_currency_alter_plan_interval.py
server/apps/identity/templates/identity/: magic_link_email.html
server/apps/orders/: models.py
server/apps/sellers/: models.py  serializers.py  urls.py  utils.py
server/apps/sellers/views/: __init__.py  price_views.py  product_views.py  seller_views.py
server/apps/shops/: models.py  serializers.py  urls.py  utils.py  views.py
server/apps/shops/migrations/: 0001_initial.py
server/apps/shops/views/: __init__.py  price_views.py  product_views.py  shop_views.py
server/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
server/config/settings/: base.py  test.py
server/shopfast/: asgi.py  settings.py  urls.py  wsgi.py
server/tests/: conftest.py
server/tests/identity/: test_identity_utils.py  test_plans.py  test_user_views.py
server/tests/sellers/: test_price_views.py  test_product_views.py  test_seller_utils.py  test_seller_views.py  test_shop_views.py
server/tests/shops/: test_price_views.py  test_product_views.py  test_shop_utils.py  test_shop_views.py
server/tests/unit/identity/: test_plans.py  test_views.py
shop/: astro.config.mjs  package-lock.json  package.json
(+61 files in other folders)
