[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shop-kit-server"
version = "0.1.0"
description = "Django REST API server for Shop Kit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shop Kit Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
]

dependencies = [
    "asgiref==3.11.0",
    "Django==6.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.3.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "django-redis==5.4.0",
    "python-dotenv==1.0.0",
    "sqlparse==0.5.5",
    "django-extensions==4.1",
]

[project.optional-dependencies]
dev = [
    "django-stubs",
    "djangorestframework-stubs",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
]

[tool.setuptools]
packages = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["venv", ".venv", "migrations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "rest_framework_simplejwt.*",
]
ignore_missing_imports = true

